--- a/styles.css
+++ b/styles.css
@@ -59,3 +59,8 @@ nav li {
     display: inline;
     margin-right: 0.5rem;
 }
+
+p {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    word-wrap:  
+}
